Fixed jQuery in login_script

--- a/W3/Workshop/www/style.css
+++ b/W3/Workshop/www/style.css
@@ -1,5 +1,28 @@
+#loginpage{
+    width:20em;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+#page{
+    background-color:#efefef;
+    max-width: 75em;
+    margin-left:auto;
+    margin-right:auto;
+    padding: 1em;
+}
+
+form input, form label{
+    display:block;
+}
+
+form input{
+    margin-bottom: 1em;
+    padding:0.5em;
+}
+
 .hidemessage{
-    display:none
+    display:none;
 }
 
 .showmessage{
