Updating home pc

--- a/W4/Angular_1/my-app/src/app/app.component.html
+++ b/W4/Angular_1/my-app/src/app/app.component.html
@@ -1,4 +1,9 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!--The content below is only a placeholder and can be replaced.
+HTML for component
+Optional included in app.component.ts
+-->
+
+
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
