--- a/w6/socks/src/app/components/chat/chat.component.html
+++ b/w6/socks/src/app/components/chat/chat.component.html
@@ -1,11 +1,18 @@
-<div>
+<div class="container">
     <form>
-        <input>
-        <Button></Button>
+        <div class="form-group">
+            <label for="messagecontent">New Message</label>
+            <input type="text" [(ngModel)]="messagecontent" name="messagecontent" id="messagecontent" class="form-control"/>
+        </div>
+        <div class="form-group">
+            <button (click)="chat(messagecontent)" class="btn btn-primary">Chat</button>
+        </div>
     </form>
-    <div>
-        <ul>
+</div>
 
-        </ul>
-    </div>
+<div>
+    <h3>Messages</h3>
+    <ul>
+        <li *ngFor="let message of messages">{{message}}</li>
+    </ul>
 </div>
